--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -78,6 +78,9 @@
 							<a class="dropdown-item" href="#" th:href="@{/users/topics}">Meus Tópicos</a>
 							<div class="dropdown-divider"></div>
 							<a class="dropdown-item" href="#" th:href="@{/users/edit-profile}">Editar Perfil</a>
+							
+							<div class="dropdown-divider"></div>
+							<a class="dropdown-item" href="#" th:href="@{/user/messages}">Mensagens</a>
 							<div class="dropdown-divider"></div>
 							<a class="dropdown-item" href="#" th:href="@{/logout}">Sair</a>
 						</div>
