--- a/src/main/resources/templates/subjects/forum-topic.html
+++ b/src/main/resources/templates/subjects/forum-topic.html
@@ -7,16 +7,15 @@
 </head>
 <body>
 	<div class="container">
-		<div class="card shadow my-4">
+		<div class="card my-4">
 			<div class="card-body">
 				<nav class="nav-breadcrumb dark" aria-label="breadcrumb">
 					<ol class="breadcrumb">
 						<li class="breadcrumb-item">
-							<a href="#" th:href="@{/disciplines/{id}(id=${discipline.id})}" 
-								th:text="${discipline.name}">Disciplina</a>
+							<a href="#" th:href="@{/subjects/{id}(id=${subject.id})}" th:text="${subject.name}">Disciplina</a>
 						</li>
 						<li class="breadcrumb-item">
-							<a href="#" th:href="@{/disciplines/{id}?page=forum(id=${discipline.id})}">Fórum</a>
+							<a href="#" th:href="@{/subjects/{id}?page=forum(id=${subject.id})}">Fórum</a>
 						</li>
 					</ol>
 				</nav>
@@ -28,12 +27,34 @@
 					<time class="timeago" th:datetime="${#dates.formatISO(forumTopic.creationDate)}"></time>
 				</span>
 
-				<div id="topic-body-editor" th:utext="${forumTopic.bodyHtml}"></div>
+				<div class="d-flex">
+					<div class="p-3 text-center ">
+						<div class="btn-group" role="group" data-bs-toggle="tooltip" data-bs-placement="right"
+							title="Este post mostra esforço de pesquisa; é útil e claro">
+							<input type="checkbox" class="btn-check" id="upvote-button" autocomplete="off"
+								th:checked="${forumTopic.me.upvoted}">
+							<label class="btn btn-outline-success btn-sm" for="upvote-button">
+								<i class="bi bi-caret-up-fill" style="font-size: 16px;"></i>
+							</label>
+						</div>
+						<div id="vote-count" class="text-center fw-bold" th:text="${forumTopic.voteCount}">3</div>
+						<div class="btn-group" role="group" data-bs-toggle="tooltip" data-bs-placement="right"
+							title="Este post não mostra nenhum esforço de pesquisa; ele não é claro ou não é útil">
+							<input type="checkbox" class="btn-check" id="downvote-button" autocomplete="off"
+								th:checked="${forumTopic.me.downvoted}">
+							<label class="btn btn-outline-secondary btn-sm" for="downvote-button">
+								<i class="bi bi-caret-down-fill" style="font-size: 16px;"></i>
+							</label>
+						</div>
 
-				<div class="tags mt-2">
-					<a class="badge rounded-pill bg-dark link-light text-decoration-none me-2" th:each="tag : ${forumTopic.tags}" 
-						th:href="@{/topic/{id}(id=${tag.id})}" th:text="${tag.name}">
-					</a>
+					</div>
+					<div class="flex-fill">
+						<div id="topic-body-editor" class="flex-fill" th:utext="${forumTopic.bodyHtml}"></div>
+					</div>
+				</div>
+				<div class="tags d-grid gap-2 d-md-flex justify-content-md-end  mt-2">
+					<a class="badge rounded-pill bg-dark link-light text-decoration-none" th:each="tag : ${forumTopic.tags}"
+						th:href="@{/topic/{id}(id=${tag.id})}" th:text="${tag.name}"> </a>
 				</div>
 			</div>
 			<div class="card-footer">
@@ -71,7 +92,7 @@
 			<div class="card-body">
 				<h5 class="card-title">Sua resposta</h5>
 				<form id="comment-form" action="#" method="post"
-					th:action="@{/disciplines/{disciplineId}/forum-topics/{topicId}(disciplineId=${discipline.id},topicId=${forumTopic.id})}"
+					th:action="@{/subjects/{disciplineId}/forum-topics/{topicId}(disciplineId=${subject.id},topicId=${forumTopic.id})}"
 					th:object="${comment}">
 					<div class="mb-4">
 						<div id="comment-body-editor"></div>
@@ -91,22 +112,34 @@
 	<script type="text/javascript" th:src="@{/js/quill-utils.js}"></script>
 
 	<script type="text/javascript" th:inline="javascript">
-		$("time.timeago").timeago();
+		let forumId = /*[[${forumTopic.id}]]*/null;
+		let topicBodyEditor = new Quill('#topic-body-editor', EditorOptions.READ_ONLY);
 
-		let topicBodyEditor = new Quill('#topic-body-editor',
-				EditorOptions.READ_ONLY);
+		$("time.timeago").timeago();
 
 		$('.comment-body').each(function() {
 			new Quill(this, EditorOptions.READ_ONLY);
 		});
 
-		let commentBodyEditor = new Quill('#comment-body-editor',
-				EditorOptions.FORUM_TOPIC_COMMENT);
+		let commentBodyEditor = new Quill('#comment-body-editor', EditorOptions.FORUM_TOPIC_COMMENT);
 		$('#comment-form').submit(function(event) {
 			if (commentBodyEditor.root.innerText.trim() !== '') {
-				$('#comment-form #bodyHtml').val(
-						commentBodyEditor.root.innerHTML);
+				$('#comment-form #bodyHtml').val(commentBodyEditor.root.innerHTML);
 			}
+		});
+
+		$('#upvote-button').click(function() {
+			$.post('/forum/' + forumId + '/upvote', function(data) {
+				$('#downvote-button').prop('checked', false);
+				$('#vote-count').text(data.voteCount);
+			});
+		});
+
+		$('#downvote-button').click(function() {
+			$.post('/forum/' + forumId + '/downvote', function(data) {
+				$('#upvote-button').prop('checked', false);
+				$('#vote-count').text(data.voteCount);
+			});
 		});
 	</script>
 </body>
