--- a/src/main/resources/templates/subjects/subject.html
+++ b/src/main/resources/templates/subjects/subject.html
@@ -204,8 +204,7 @@
 					<div class="card border border-1 border-dark shadow">
 						<h4 class="card-header text-center">Novo Teste</h4>
 						<div class="card-body">
-							<form action="#" method="post" th:action="@{/subjects/{id}/test(id=${subject.id})}"
-								th:object="${test}">
+							<form action="#" method="post" th:action="@{/subjects/{id}/test(id=${subject.id})}" th:object="${test}">
 								<div class="alert alert-danger alert-dismissible fade show" role="alert"
 									th:if="${#fields.hasErrors('name') || #fields.hasErrors('topics')}">
 									<span class="text-center">Erro ao criar teste. Verifique os campos e tente novamente!</span>
@@ -316,22 +315,32 @@
 					</div>
 
 					<div class="list-group" th:unless="${#lists.isEmpty(forumTopics)}">
-						<a href="#" class="list-group-item list-group-item-action list-card-item mb-3 border-1 shadow" th:each="topic : ${forumTopics}"
+						<a href="#" class="list-group-item list-group-item-action list-card-item mb-3 border-1 shadow"
+							th:each="topic : ${forumTopics}"
 							th:href="@{/subjects/{id}/forum-topics/{topicId}(id=${subject.id}, topicId=${topic.id})}">
 
-							<div class="d-flex w-100 justify-content-between">
-								<h5 class="mb-1" th:text="${topic.title}">Topic Title</h5>
-								<time class="text-muted timeago" th:datetime="${#dates.formatISO(topic.creationDate)}">3 days
-									ago</time>
-							</div>
-							<div class="mb-1 truncate" th:utext="${topic.bodyHtml}">Some placeholder content in a paragraph.</div>
-
-							<div class="d-flex justify-content-between align-items-center">
-								<div class="tags align-self-center">
-									<span class="badge rounded-pill bg-dark me-2" th:each="tag : ${topic.tags}" th:text="${tag.name}"></span>
+							<div class="d-flex">
+								<div class="me-4 text-center align-self-center">
+									<small class="d-block text-muted">Votos</small> 
+									<small th:text="${topic.voteCount}"></small>
 								</div>
+								<div class="flex-fill">
+									<div class="d-flex w-100 justify-content-between">
+										<h5 class="mb-1" th:text="${topic.title}">Topic Title</h5>
+										<time class="text-muted timeago" th:datetime="${#dates.formatISO(topic.creationDate)}">3 days
+											ago</time>
+									</div>
+									<div class="mb-1 truncate" th:utext="${topic.bodyHtml}">Some placeholder content in a
+										paragraph.</div>
 
-								<small th:text="'Criado por ' + ${topic.user.fullName}">Criado por Gustavo Alves.</small>
+									<div class="d-flex justify-content-between align-items-center">
+										<div class="tags align-self-center">
+											<span class="badge rounded-pill bg-dark me-2" th:each="tag : ${topic.tags}" th:text="${tag.name}"></span>
+										</div>
+
+										<small th:text="'Criado por ' + ${topic.user.fullName}">Criado por Gustavo Alves.</small>
+									</div>
+								</div>
 							</div>
 						</a>
 					</div>
