--- a/src/main/resources/templates/subjects/subject.html
+++ b/src/main/resources/templates/subjects/subject.html
@@ -251,7 +251,7 @@
 
 				<!-- Forum -->
 				<div th:if="${#strings.equalsIgnoreCase(page, 'forum')}">
-					<div class="card bg-white mb-3">
+					<div class="card">
 						<div class="card-body">
 							<span>Precisa de Ajuda?</span>
 
@@ -308,13 +308,74 @@
 											<button type="submit" class="btn btn-danger" onclick="$('#forum-topic-form').submit();">Criar</button>
 										</div>
 									</div>
-
 								</div>
 							</div>
+
 						</div>
 					</div>
 
-					<div class="list-group" th:unless="${#lists.isEmpty(forumTopics)}">
+					<div class="p-4">
+						<button id="expand-filters" class="btn btn-secondary mb-3" type="button" data-bs-toggle="collapse"
+							data-bs-target="#filters-collapse" aria-expanded="false" aria-controls="filters-collapse">
+							Filtros <i class="bi bi-arrows-angle-expand ms-1"></i>
+						</button>
+
+						<div id="filters-collapse" class="collapse border border-secondary p-4">
+							<form id="filters-form">
+								<div class="row">
+									<div class="col-md-6">
+										<fieldset>
+											<legend>Filtrar por</legend>
+											<div class="btn-group" role="group" aria-label="Basic checkbox toggle button group">
+												<input type="checkbox" class="btn-check" id="no-answer-btncheck" name="filter" value="NoAnswer"
+													autocomplete="off">
+												<label class="btn btn-outline-dark btn-sm" for="no-answer-btncheck">Sem resposta</label>
+
+												<input type="checkbox" class="btn-check" id="no-accepted-answer--btncheck" name="filter"
+													value="NoAcceptedAnswer" autocomplete="off">
+												<label class="btn btn-outline-dark btn-sm" for="no-accepted-answer--btncheck">Sem resposta
+													aceita</label>
+											</div>
+										</fieldset>
+									</div>
+
+									<div class="col-md-6 mb-2">
+										<fieldset>
+											<legend>Classificar por</legend>
+											<div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+												<input type="radio" class="btn-check" name="sort" id="newest-btnradio" value="Newest"
+													autocomplete="off" checked>
+												<label class="btn btn-outline-dark btn-sm" for="newest-btnradio">Mais recentes</label>
+
+												<input type="radio" class="btn-check" name="sort" id="votes-btnradio" value="Votes"
+													autocomplete="off">
+												<label class="btn btn-outline-dark btn-sm" for="votes-btnradio">Mais votos</label>
+
+												<input type="radio" class="btn-check" name="sort" id="visits-btnradio" value="Visits"
+													autocomplete="off">
+												<label class="btn btn-outline-dark btn-sm" for="visits-btnradio">Mais visitas</label>
+											</div>
+										</fieldset>
+									</div>
+
+									<div class="sort col">
+										<div class="mb-3">
+											<label for="topics">Tópicos de Tag</label>
+											<select name="topic" id="topic" class="form-select select2-filter-tags" multiple
+												style="width: 100%;">
+												<option th:each="topic : ${topics}" th:value="${topic.id}" th:text="${topic.name}"></option>
+											</select>
+										</div>
+									</div>
+								</div>
+								<div class="d-grid gap-2 col-4 mx-auto">
+									<button id="apply-filters" type="button" class="btn btn-danger btn-sm">Aplicar</button>
+								</div>
+							</form>
+						</div>
+					</div>
+
+					<div id="forums" class="list-group" th:unless="${#lists.isEmpty(forumTopics)}">
 						<a href="#" class="list-group-item list-group-item-action list-card-item mb-3 border-1 shadow"
 							th:each="topic : ${forumTopics}"
 							th:href="@{/subjects/{id}/forum-topics/{topicId}(id=${subject.id}, topicId=${topic.id})}">
@@ -322,16 +383,14 @@
 							<div class="d-flex">
 								<div class="me-4 text-center align-self-center">
 									<div class="mb-1">
-										<small class="d-block text-muted">votos</small> 
-										<small th:text="${topic.voteCount}">1</small>
+										<small class="d-block text-muted">votos</small> <small th:text="${topic.voteCount}">1</small>
 									</div>
 									<div class="mb-1" th:classappend="${topic.answered} ? 'badge bg-success'">
-										<small class="d-block" th:classappend="${not topic.answered} ? 'text-muted'">respostas</small> 
-										<small th:text="${topic.totalComments}">1</small>
+										<small class="d-block" th:classappend="${not topic.answered} ? 'text-muted'">respostas</small> <small
+											th:text="${topic.totalComments}">1</small>
 									</div>
 									<div class="mb-1">
-										<small class="d-block text-muted">visitas</small> 
-										<small th:text="${topic.viewCount}">1</small>									
+										<small class="d-block text-muted">visitas</small> <small th:text="${topic.viewCount}">1</small>
 									</div>
 								</div>
 								<div class="flex-fill">
@@ -364,6 +423,8 @@
 	<script type="text/javascript" th:src="@{/js/quill-utils.js}"></script>
 
 	<script type="text/javascript" th:inline="javascript">
+		let subjectId = /*[[${subject.id}]]*/null;
+	
 		$("time.timeago").timeago();
 	
 		$('.select2').select2({
@@ -371,6 +432,9 @@
 		});
 		$('.select2-tags').select2({
 			dropdownParent: $("#forumTopicModal") 		
+		});
+		$('.select2-filter-tags').select2({
+			closeOnSelect: false
 		});
 
 		$('#likeButton').click(function() {
@@ -436,5 +500,7 @@
 			}
 		});
 	</script>
+	
+	<script th:src="@{/js/forum-filter.js}"></script>
 </body>
 </html>
