Create page to manage users

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -33,6 +33,9 @@
 							aria-expanded="false">Opções do ADM</a>
 						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 							<li>
+								<a class="dropdown-item" href="#" th:href="@{/admin/users}">Usuários</a>
+							</li>
+							<li>
 								<a class="dropdown-item" href="#" th:href="@{/admin/institutions}">Instituições</a>
 							</li>
 							<li>
