--- a/src/main/resources/templates/users/topic-edit.html
+++ b/src/main/resources/templates/users/topic-edit.html
@@ -67,7 +67,7 @@
 							<label class="form-label fw-bold" for="status">Disciplina</label>
 
 							<select class="form-select" id="discipline" name="discipline" disabled>
-								<option th:value="${topic.discipline.id}" th:text="${topic.discipline.name}" selected></option>
+								<option th:value="${topic.subject.id}" th:text="${topic.subject.name}" selected></option>
 							</select>
 						</div>
 						<div class="col-md-6">
