--- a/src/main/resources/templates/subjects/topic-details.html
+++ b/src/main/resources/templates/subjects/topic-details.html
@@ -84,8 +84,7 @@
 								<a href="#" th:href="@{/dashboard}" th:text="${topic.subject.course.name}">Disciplina</a>
 							</li>
 							<li class="breadcrumb-item">
-								<a href="#" th:href="@{/subjects/{id}(id=${topic.subject.id})}"
-									th:text="${topic.subject.name}">Fórum</a>
+								<a href="#" th:href="@{/subjects/{id}(id=${topic.subject.id})}" th:text="${topic.subject.name}">Fórum</a>
 							</li>
 						</ol>
 					</nav>
@@ -209,9 +208,8 @@
 												th:value="${type}" th:text="${type.displayName}"></option>
 										</select>
 										<div id="typeHelp" class="form-text">
-											O tipo da questão está relacionado com a dificuldade dela.
-											<br>
-											Por exemplo, ao escolher "Simulado" a questão só aparecerá em simulados que contém este tópico.
+											O tipo da questão está relacionado com a dificuldade dela. <br> Por exemplo, ao escolher
+											"Simulado" a questão só aparecerá em simulados que contém este tópico.
 										</div>
 									</div>
 
@@ -232,13 +230,45 @@
 		<div id="contentCard" class="card my-3 shadow">
 			<div class="card-body" id="contentEditor" th:utext="${topic.bodyHtml}"></div>
 
-			<div class="d-flex justify-content-end p-3">
-				<button id="finishButton" class="btn btn-outline-success"
-					th:classappend="${topic.user.finished} ? 'active'">
+			<div class="d-flex justify-content-center mt-3">
+				<button id="finishButton" class="btn btn-outline-success" th:classappend="${topic.user.finished} ? 'active'">
 					<i class="fa fa-check"></i>
-					<span th:text="${topic.user.finished} ? 'Concluído' : 'Marcar como concluído'">Marcar como
-						concluído</span>
+					<span th:text="${topic.user.finished} ? 'Concluído' : 'Marcar como concluído'">Marcar como concluído</span>
 				</button>
+			</div>
+			<hr>
+			<div class="review-container d-flex justify-content-center">
+				<div class="text-center">
+					<h5 class="text-muted">Avalie este tópico</h5>
+					<div id="review-stars-container" style="font-size: 32px;"></div>
+				</div>
+				
+				<!-- Modal -->
+				<div class="modal fade" id="review-modal" tabindex="-1" aria-labelledby="reviewModalLabel"
+					aria-hidden="true">
+					<div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
+						<div class="modal-content">
+							<div class="modal-header">
+						        <h5 class="modal-title" id="reviewModalLabel">Avaliação - [[${topic.name}]]</h5>
+						        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+						    </div>
+							<div class="modal-body">
+								<small class="d-flex text-muted mb-3">Sua avaliação é fundamental para conseguirmos melhorar e atualizar o conteúdo. 
+									Atualizamos os tópicos frequentemente com base nas críticas e/ou sugestões dos estudantes.</small>
+								<div class="mb-3 row">
+									<label for="review-content" class="col-sm-2 col-form-label">Comentário</label>
+									<div class="col-sm-10">
+										<textarea class="form-control" id="review-content" rows="6"
+											placeholder="Deixe sua observação..." maxlength="500" th:text="${topic.user.review.content}"></textarea>
+									</div>
+								</div>
+							</div>
+							<div class="modal-footer">
+								<button type="button" id="save-review-button" class="btn btn-danger">Salvar <i class="bi bi-save2"></i></button>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 
@@ -312,7 +342,33 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" th:src="@{/js/quill-utils.js}"></script>
+	<script th:src="@{/js/quill-utils.js}"></script>
+	<script th:src="@{/js/rating.js}"></script>
+	
+	<script type="text/javascript" th:inline="javascript">
+		 $('#review-stars-container').rating({
+			 value: /*[[${topic.user.review.stars}]]*/0,
+	         click: function (event) {
+	        	 $('#review-modal').modal('show');
+	         }
+	    });
+	
+		$('#save-review-button').click(function() {
+			let stars = $("#review-stars-container .fa-star").length;
+			let content = $("#review-content").val();
+			
+			$.ajax({
+				method: 'POST',
+				url: window.location.href + '/review',
+				data: JSON.stringify({ stars: stars, content: content }),
+				contentType: "application/json; charset=utf-8"
+			}).done(function () {
+				$('#review-modal').modal('hide');
+			}).fail(function(jqXHR, textStatus) {
+				alert( "Request failed: " + textStatus );
+			});
+		});
+	</script>
 
 	<script type="text/javascript">
 		var annotationEditor = new Quill('#annotationEditor',
