--- a/src/main/resources/templates/admin/topic-edit.html
+++ b/src/main/resources/templates/admin/topic-edit.html
@@ -53,9 +53,9 @@
 					<div class="mb-3">
 						<label class="form-label fw-bold" for="status">Disciplina</label>
 
-						<select class="form-select" id="discipline" name="discipline" th:field="*{discipline.id}">
-							<option th:each="discipline : ${disciplines}" th:value="${discipline.id}" th:text="${discipline.name}"
-								th:selected="${discipline == topic.discipline}"></option>
+						<select class="form-select" id="subject" name="subject" th:field="*{subject.id}">
+							<option th:each="subject : ${subjects}" th:value="${subject.id}" th:text="${subject.name}"
+								th:selected="${subject == topic.subject}"></option>
 						</select>
 					</div>
 
