--- a/src/main/resources/templates/subjects/subject.html
+++ b/src/main/resources/templates/subjects/subject.html
@@ -192,8 +192,11 @@
 
 						<p class="mb-1 truncate" th:text="${topic.description}">Some placeholder content in a paragraph.</p>
 
-						<div class="d-flex justify-content-end align-items-center">
-							<i class="fa fa-thumbs-o-up fa-lg text-primary me-1"></i> <small class="fw-bold" th:text=${topic.likes}>10</small>
+						<div class="d-flex justify-content-end align-items-center" th:if="${topic.stars}">
+							<small class="fw-bold text-warning" th:text="${topic.stars}">10</small>
+							<div class="star-rating mx-1" data-rating-stars="5" data-rating-readonly="true" 
+								th:data-rating-value="${topic.stars}" data-rating-half="true"></div>
+							<small class="text-muted" th:text="|(${topic.totalReviews})|"></small>
 						</div>
 					</div>
 				</div>
@@ -418,6 +421,7 @@
 		</div>
 	</div>
 
+	<script th:src="@{/js/rating.js}"></script>
 	<script type="text/javascript" th:src="@{/js/timeago/timeago.js}"></script>
 	<script type="text/javascript" th:src="@{/js/timeago/jquery.timeago.pt-br.js}"></script>
 	<script type="text/javascript" th:src="@{/js/quill-utils.js}"></script>
