Add SupportController and support pages

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -85,6 +85,8 @@
 							<div class="dropdown-divider"></div>
 							<a class="dropdown-item" href="#" th:href="@{/user/messages}">Mensagens</a>
 							<div class="dropdown-divider"></div>
+							<a class="dropdown-item" href="#" th:href="@{/support}">Suporte</a>
+							<div class="dropdown-divider"></div>
 							<a class="dropdown-item" href="#" th:href="@{/logout}">Sair</a>
 						</div>
 					</div>
